Fixed unintended horizontal scrolling

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,11 @@
   ===
 */
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 body {
   font-family: 'Poppins', sans-serif !important;
   overflow-y: auto;
@@ -220,6 +225,7 @@ hr {
   }
 }
 
+/* iPhone SE and below */
 @media (max-width: 374.98px) {
   #equipo img {
     height: 100px;
